--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -3,5 +3,5 @@ project(cpp_3d_renderer VERSION 0.1.0 LANGUAGES C CXX)
 
 find_package(sfml REQUIRED)
 
-add_executable(${PROJECT_NAME} main.cpp)
+add_executable(${PROJECT_NAME} main.cpp Renderer.cpp RGBA32Image.cpp Vector3.cpp)
 target_link_libraries(${PROJECT_NAME} sfml::sfml)
