--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,9 +1,11 @@
 cmake_minimum_required(VERSION 3.28.1)
 project(cpp_3d_renderer VERSION 0.1.0 LANGUAGES C CXX)
+set (CMAKE_CXX_STANDARD 20)
 
 find_package(sfml REQUIRED)
+find_package(Eigen3 REQUIRED)
 
-include_directories(${GLM_INCLUDE_DIRS})
+include_directories(${Eigen3_INCLUDE_DIR})
 
-add_executable(${PROJECT_NAME} main.cpp Renderer.cpp RGBA32Image.cpp Vector3.cpp DisplayUtils.cpp LinAlg.cpp)
-target_link_libraries(${PROJECT_NAME} sfml::sfml)
+add_executable(${PROJECT_NAME} main.cpp Renderer.cpp RGBA32Image.cpp DisplayUtils.cpp)
+target_link_libraries(${PROJECT_NAME} sfml::sfml Eigen3::Eigen)
