--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,6 +1,7 @@
 cmake_minimum_required(VERSION 3.28.1)
 project(cpp_3d_renderer VERSION 0.1.0 LANGUAGES C CXX)
 set (CMAKE_CXX_STANDARD 20)
+set(CMAKE_CXX_FLAGS "/Ox")
 
 find_package(sfml REQUIRED)
 find_package(Eigen3 REQUIRED)
