minimal working build
why is cpp like this

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,21 +1,26 @@
 cmake_minimum_required(VERSION 3.28.1)
 project(cpp_3d_renderer VERSION 0.1.0 LANGUAGES C CXX)
-set (CMAKE_CXX_STANDARD 20)
-set(CMAKE_CXX_STANDARD_REQUIRED True)
+set( CMAKE_CXX_STANDARD 20)
+set( CMAKE_CXX_STANDARD_REQUIRED True )
+set( CMAKE_EXPORT_COMPILE_COMMANDS ON )
+set( CMAKE_TOOLCHAIN_FILE conan_toolchain.cmake )
 
 if(CMAKE_CXX_COMPILER_ID STREQUAL "MSVC")
-    set(CMAKE_CXX_FLAGS "/Ox")
+    set(CMAKE_CXX_FLAGS "/Ox /EHsc")
 elseif (CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
     set(CMAKE_CXX_FLAGS "-O3")
 else()
-    message(SEND_ERROR "Only GCC and MSVC are supported, proceed at your own risk.")
+    message("Only GCC and MSVC add optimisation flags, proceed at your own risk.")
 endif()
 
-
-find_package(sfml REQUIRED)
+list(APPEND CMAKE_PREFIX_PATH ${CMAKE_BINARY_DIR})
+find_package(SFML REQUIRED)
 find_package(Eigen3 REQUIRED)
+find_package(tinyobjloader REQUIRED) 
 
 include_directories(${Eigen3_INCLUDE_DIR})
+include_directories(${tinyobjloader_INCLUDE_DIR})
 
-add_executable(${PROJECT_NAME} main.cpp Renderer.cpp RGBA32Image.cpp RGBA32Color.cpp Triangle.cpp Camera.cpp ShapeBuilder.cpp Application.cpp)
-target_link_libraries(${PROJECT_NAME} sfml::sfml Eigen3::Eigen)
+add_executable(${PROJECT_NAME} main.cpp Renderer.cpp RGBA32Image.cpp RGBA32Color.cpp Triangle.cpp Camera.cpp ShapeBuilder.cpp Application.cpp Model.cpp)
+target_link_libraries(${PROJECT_NAME} sfml::sfml Eigen3::Eigen tinyobjloader::tinyobjloader)
+ 
